<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="280dp"
    android:layout_gravity="center"
    android:background="@drawable/bounced"
    android:orientation="vertical"
    android:visibility="visible"
    >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:text="@string/提示"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textSize="20sp"
        android:text="@string/您确定要删除这个任务吗"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/back_20"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginEnd="190dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/none"
        android:text="@string/取消"
        android:textColor="#169BD5" />

    <Button
        android:id="@+id/sure_delete"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginTop="-20dp"
        android:layout_marginStart="250dp"
        android:layout_marginEnd="250dp"
        android:background="@drawable/none"
        android:text="@string/确认"
        android:textColor="#169BD5" />

</LinearLayout>