<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="280dp"
    android:layout_gravity="center"
    android:background="@drawable/bounced"
    android:orientation="vertical"
    android:visibility="visible"
    >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textSize="20sp"
        android:text="@string/添加清单"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/list_new_1"
        style="@style/ThemeOverlay.AppCompat.Dialog.Alert"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="#ffffff"
        android:hint="@string/请输入清单名"
        android:maxLength="40" />

    <View
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="#CCCCCC"
        />



    <Button
        android:id="@+id/back_10"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginEnd="190dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="20pt"
        android:background="@drawable/none"
        android:text="@string/取消"
        android:textColor="#169BD5" />

    <Button
        android:id="@+id/sure_list_new"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginTop="-20dp"
        android:layout_marginStart="250dp"
        android:layout_marginEnd="250dp"
        android:background="@drawable/none"
        android:text="@string/确认"
        android:textColor="#169BD5" />

</LinearLayout>