<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#00000000"
    android:visibility="visible"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/list_select_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/none"
            android:text="@string/收集箱" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:src="@drawable/to_down" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/请选择清单"
            android:textColor="#000000"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="40dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ListView
            android:id="@+id/listView4"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/none"
            android:divider="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <Button
            android:id="@+id/back_6"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginLeft="280dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/none"
            android:text="@string/取消"
            android:textColor="#169BD5">

        </Button>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>