<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="330dp"
    android:id="@+id/createa_transaction"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:background="@drawable/new_taks"
>


    <EditText
        android:id="@+id/new_task"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/none"
        android:inputType="text"
        android:hint="@string/准备做什么"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view8"
        android:layout_width="250dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="#cccccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_task"
        tools:layout_marginTop="5dp" />

    <Button
        android:id="@+id/back_3"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/none"
        android:text="@string/取消"
        android:textColor="#169BD5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.723"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view8" />

    <Button
        android:id="@+id/sure_task"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/none"
        android:text="@string/确认"
        android:textColor="@color/color_ok_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view8" />

    <Button
        android:id="@+id/task_level_1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/level0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view8" />

    <Button
        android:id="@+id/task_list_1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/menu_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view8" />

    <Button
        android:id="@+id/task_date_1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view8" />

</android.support.constraint.ConstraintLayout>